# veilguard

./: .env.example  .gitignore  Cargo.toml  README.md
backend/: .env.example  Cargo.toml
backend/migrations/: 001_create_users_table.sql
backend/src/: config.rs  errors.rs  lib.rs  main.rs
backend/src/auth/: audit.rs  behavioral.rs  binding.rs  mod.rs  paseto.rs  ses.rs  threat.rs  utils.rs
backend/src/database/: mod.rs  redis.rs
backend/src/middleware/: auth.rs  csrf.rs  mod.rs  rate.rs
backend/src/models/: mod.rs  security.rs  ses.rs  user.rs
backend/src/routes/: auth.rs  mod.rs  ses.rs  users.rs
frontend/: Cargo.toml  build.sh  index.html
frontend/src/: lib.rs
frontend/src/components/: layout.rs  mod.rs
frontend/src/contexts/: mod.rs
frontend/src/pages/: dashboard.rs  home.rs  login.rs  mod.rs  profile.rs  register.rs
frontend/src/router/: mod.rs
frontend/src/services/: api.rs  auth.rs  mod.rs
frontend/src/types/: mod.rs
frontend/src/utils/: validation.rs
migrations/: README.md
script/: env.sh
src/: config.rs  database.rs  errors.rs  lib.rs  main.rs  validation.rs
src/auth/: middleware.rs  mod.rs  paseto.rs  pw.rs
src/middleware/: csrf.rs  mod.rs  rate_limit.rs
src/models/: user.rs
src/routes/: auth.rs  mod.rs  users.rs  web.rs
static/css/: style.css
static/js/: main.js  validation.js
templates/: auth.html  base.html  dashboard.html  landing.html
templates/components/: form_input.html  notification.html  user_profile_card.html  validation_errors.html
