[package]
name = "veilguard"
version = "0.2.0"
edition = "2024"

[dependencies]
argon2 = { version = "0.5.3", features = ["std", "rand"] }
axum = { version = "0.8.4", features = ["json", "macros", "tower-log"] }
axum-extra = { version = "0.10.1", features = ["cookie"] }
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
env_logger = "0.11.8"
log = "0.4.28"
rusty_paseto = "0.7.2"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
time = "0.3.43"
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace", "cors"] }
tracing = "0.1.41"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
