[package]
name = "veilguard"
version = "0.3.0"
edition = "2024"

[dependencies]
argon2 = { version = "0.5.3", features = ["std", "rand"] }
axum = { version = "0.8.4", features = ["json", "macros", "tower-log"] }
axum-extra = { version = "0.10.1", features = ["cookie"] }
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
env_logger = "0.11.8"
hex = "0.4.3"
hmac = "0.12.1"
log = "0.4.28"
rand = "0.8.5"
redis = { version = "0.27.6", features = ["tokio-comp", "connection-manager"] }
reqwest = { version = "0.12.23", features = ["json"] }
rusty_paseto = "0.7.2"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
time = "0.3.44"
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace", "cors"] }
tracing = "0.1.41"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
