[package]
name = "veilguard-frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo = { version = "0.11", features = ["net", "storage", "utils"] }
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
log = "0.4"
wasm-logger = "0.2"
regex = "1.0"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Document",
  "Element",
  "HtmlElement",
  "Window",
  "Location",
  "History",
  "Storage",
  "HtmlInputElement",
  "HtmlFormElement",
  "Event",
  "EventTarget",
  "FormData",
]